Added navbar items and padded most informational pages

--- a/src/dragon/dragon/templates/dragon/index.html
+++ b/src/dragon/dragon/templates/dragon/index.html
@@ -3,27 +3,30 @@
 {% block title %}{{ block.super }}{% endblock %}
 
 {% block content %}
-    <h1>Welcome to UniGames</h1>
-    <p>
-        Unigames is the table-top gaming club at the University of Western Australia. We do roleplaying, wargaming, 
-        board and card gaming and indeed gaming in all forms (except video games, try next door at 
-        <a href ="https://www.ucc.asn.au">UCC</a> for that). Whether it's D&D, Magic the Gathering, Warhammer 40K, 
-        or any of our dozens of other systems and games, we've got you covered. We also have some chess sets, 
-        Mahjong, and at least 2 sets of Monopoly just in case. Check out our 
-        <a href="{% url 'library:ALL' %}">Library</a>.
-    </p>
-    <p>
-        Membership costs $5 per year for Guild Members (but $7 for everyone else) and entitles you to vote at the 
-        annual committee elections, join one of our many long-running campaigns, borrow our books and games, and 
-        receive a 10% discount when you buy from our generous sponsor Tactics. We also keep a well stocked fidge in 
-        our clubroom for all your mid-game snacking needs. Our snacks are some of the cheapest on campus!
-    </p>
-    <p>
-        The clubroom is currently located on the top level of Cameron Hall, which is above the Tavern. 
-        Ask for directions at the Guild Student Centre (ground floor in Guild Village).
-    </p>
-    <p>
-        A good place to start looking for information is the <a href="{% url 'faq' %}">Frequently Asked Questions</a>. 
-        Otherwise, pick something interesting from the menu on the right!
-    </p>
+
+    <div class="col-12">
+        <h1>Welcome to UniGames</h1>
+        <p>
+            Unigames is the table-top gaming club at the University of Western Australia. We do roleplaying, wargaming,
+            board and card gaming and indeed gaming in all forms (except video games, try next door at
+            <a href ="https://www.ucc.asn.au">UCC</a> for that). Whether it's D&D, Magic the Gathering, Warhammer 40K,
+            or any of our dozens of other systems and games, we've got you covered. We also have some chess sets,
+            Mahjong, and at least 2 sets of Monopoly just in case. Check out our
+            <a href="{% url 'library:ALL' %}">Library</a>.
+        </p>
+        <p>
+            Membership costs $5 per year for Guild Members (but $7 for everyone else) and entitles you to vote at the
+            annual committee elections, join one of our many long-running campaigns, borrow our books and games, and
+            receive a 10% discount when you buy from our generous sponsor Tactics. We also keep a well stocked fidge in
+            our clubroom for all your mid-game snacking needs. Our snacks are some of the cheapest on campus!
+        </p>
+        <p>
+            The clubroom is currently located on the top level of Cameron Hall, which is above the Tavern.
+            Ask for directions at the Guild Student Centre (ground floor in Guild Village).
+        </p>
+        <p>
+            A good place to start looking for information is the <a href="{% url 'faq' %}">Frequently Asked Questions</a>.
+            Otherwise, pick something interesting from the menu on the right!
+        </p>
+    </div>
 {% endblock %}
