--- a/src/dragon/dragon/templates/dragon/life-members.html
+++ b/src/dragon/dragon/templates/dragon/life-members.html
@@ -4,21 +4,20 @@
 
 {% block content %}
 
-    <h1>Honorary Life Members</h1>
-
-    <p>
-        For outstanding contributions to the club, a member may be awarded with Life Membership.
-    </p>
-
-    <p>
-        <strong>Peter Brian Williams</strong>: Awarded in 1984
-    </p>
-    <p>    
-        <strong>Leonard Goulds</strong>: Awarded on the 5th of March 2013
-    </p>
-
-    <p>
-        <strong>Lyndon 'Frames' White</strong>: Awarded on the 15th of April 2015
-    </p>
+    <div class="col-12">
+        <h1>Honorary Life Members</h1>
+        <p>
+            For outstanding contributions to the club, a member may be awarded with Life Membership.
+        </p>
+        <p>
+            <strong>Peter Brian Williams</strong>: Awarded in 1984
+        </p>
+        <p>
+            <strong>Leonard Goulds</strong>: Awarded on the 5th of March 2013
+        </p>
+        <p>
+            <strong>Lyndon 'Frames' White</strong>: Awarded on the 15th of April 2015
+        </p>
+    </div>
 
 {% endblock %}
