--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -30,6 +30,16 @@
             <a class="text-center text-md-left nav-link" href="{% url 'index' %}">HOME</a>
           </li>
           <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-center text-md-left" href="#" id="AboutDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              INFO
+            </a>
+            <div class="dropdown-menu" aria-labelledby="libraryDropdown">
+              <a class="dropdown-item text-center text-md-left" href="{% url 'committee' %}">Committee</a>
+              <a class="dropdown-item text-center text-md-left" href="{% url 'life-members' %}">Life Members</a>
+              <a class="dropdown-item text-center text-md-left" href="{% url 'roleplaying' %}">Roleplaying</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-center text-md-left" href="#" id="libraryDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               LIBRARY
             </a>
@@ -64,15 +74,21 @@
 
         {% endif %}
         <li class="nav-item">
-          <a class="text-center text-md-left nav-link" href="http://webcam.ucc.asn.au/">SPY ON US HERE</a>
+          <a class="text-center text-md-left nav-link" href="/faq">FAQ</a>
+        </li>
+        <li class="nav-item">
+          <a class="text-center text-md-left nav-link" href="/contact-us">CONTACT US</a>
+        </li>
+        <li class="nav-item">
+          <a class="text-center text-md-left nav-link" href="http://webcam.ucc.asn.au/">SPY CAM</a>
         </li>
         {# Login/out for mobile #}
         <li class="nav-item">
           <div class="d-md-none">
             {% if user.is_authenticated %}
-            <a class="text-center text-md-left nav-link" href="/members/signout">SIGNOUT</a>
+            <a class="text-center text-md-left nav-link" href="/members/signout">SIGN OUT</a>
             {% else %}
-            <a class="text-center text-md-left nav-link" href="/members/signin">SIGNIN</a>
+            <a class="text-center text-md-left nav-link" href="/members/signin">SIGN IN</a>
             {% endif %}
           </div>
         </li>
@@ -82,11 +98,11 @@
         <ul class="navbar-nav ml-auto">  
           {% if user.is_authenticated %}
           <li class="nav-item">
-              <a class="text-center text-md-left nav-link" href="/members/signout">SIGNOUT</a>
+              <a class="text-center text-md-left nav-link" href="/members/signout">SIGN OUT</a>
           </li>
           {% else %}
           <li class="nav-item">
-              <a class="text-center text-md-left nav-link" href="/members/signin">SIGNIN</a>
+              <a class="text-center text-md-left nav-link" href="/members/signin">SIGN IN</a>
           </li>
           {% endif %}
         </ul>
