--- a/src/dragon/dragon/templates/dragon/contact-us.html
+++ b/src/dragon/dragon/templates/dragon/contact-us.html
@@ -4,38 +4,40 @@
 
 {% block content %}
 
-    <h1>Contact Us</h1>
+    <div class="col-12">
+        <h1>Contact Us</h1>
 
-    <h2>Facebook</h2>
+        <h2>Facebook</h2>
 
-    <p>
-        By far the most popular way for club members to stay in touch electronically is though the club Facebook 
-        group. <a href="https://www.facebook.com/groups/uwa.unigames/">Join it today</a>!
-        <br>The Facebook group is intended for club members: it is a great place to discuss your games, recruit 
-        players, and generally chat. All events are publicised though this group (though not necessarily exclusively).    
-    </p>
+        <p>
+            By far the most popular way for club members to stay in touch electronically is though the club Facebook
+            group. <a href="https://www.facebook.com/groups/uwa.unigames/">Join it today</a>!
+            <br>The Facebook group is intended for club members: it is a great place to discuss your games, recruit
+            players, and generally chat. All events are publicised though this group (though not necessarily exclusively).
+        </p>
 
-    <h2>Email us</h2>
+        <h2>Email us</h2>
 
-    <p>
-        To contact us with any questions or comments please email: 
-        <a href="mailto:uwaunigames@gmail.com">uwaunigames@gmail.com</a>.
-    </p>
+        <p>
+            To contact us with any questions or comments please email:
+            <a href="mailto:uwaunigames@gmail.com">uwaunigames@gmail.com</a>.
+        </p>
 
-    <h2>The Unigames Mailing List</h2>
+        <h2>The Unigames Mailing List</h2>
 
-    <p>
-        Unigames has a mailing list which is used by the committee to communicate important information to the 
-        members. It is recommended that all members join the list. To join the mailing list you will first need an 
-        email account. Luckily these are now easy to come by:
-    </p>
-    
-    <ul>
-        <li><em>No-frills Method</em>
-        <br>Send an email to <strong>unigames@ucc.gu.uwa.edu.au</strong> with just the 
-        word "subscribe" (again, no brackets) in the subject or body. Well done.</li>
-        <li><em>WWW Method</em><br>Visit our 
-        <a href="http://lists.ucc.gu.uwa.edu.au/mailman/listinfo/unigames">online subscription manager.</a></li>
-    </ul>
+        <p>
+            Unigames has a mailing list which is used by the committee to communicate important information to the
+            members. It is recommended that all members join the list. To join the mailing list you will first need an
+            email account. Luckily these are now easy to come by:
+        </p>
+
+        <ul>
+            <li><em>No-frills Method</em>
+            <br>Send an email to <strong>unigames@ucc.gu.uwa.edu.au</strong> with just the
+            word "subscribe" (again, no brackets) in the subject or body. Well done.</li>
+            <li><em>WWW Method</em><br>Visit our
+            <a href="http://lists.ucc.gu.uwa.edu.au/mailman/listinfo/unigames">online subscription manager.</a></li>
+        </ul>
+    </div>
 
 {% endblock %}
