--- a/src/dragon/members/templates/members/signin.html
+++ b/src/dragon/members/templates/members/signin.html
@@ -3,7 +3,7 @@
 {% block title %}{{ block.super }} - Sign In{% endblock %}
 
 {% block content %}
-<div class="limiter">
+<div class="col-12">
   <div class="container-login100">
     <div class="wrap-login100 p-b-160 p-t-50">
     <span class="login100-form-title p-b-43">
