Fix navbar issues with mobile display

--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -51,9 +51,6 @@
             </div>
           </li>
         {% load templatefilters %}
-        {% if user.is_authenticated %}
-        <div class="collapse navbar-collapse dual-collapse2">
-        <ul class="navbar-nav ml-auto">  
           {% if user.is_authenticated %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-center text-md-left" href="#" id="memberDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -68,6 +65,7 @@
               <a class="dropdown-item text-center text-md-left" href="/members/nonmember_form/">Add Non-Members</a>
             </div>
           </li>
+          {% endif %}
           {% if request.user|has_group:"Committee" or user.is_staff %} 
           <li class="nav-item">
               <a class="text-center text-md-left nav-link" href="/members/signout">SIGN OUT</a>
@@ -78,7 +76,6 @@
           </li>
           {% endif %}
         </ul>
-    </div>
     </nav>
     {% block content %}
     {% endblock %}
