--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
-    <script src="https://kit.fontawesome.com/985e02c2ee.js"></script>
+`    <script src="https://kit.fontawesome.com/985e02c2ee.js"></script>{# Miguel's fontawesome kit - sub out with someone else's when it stops working #}
     <link rel="stylesheet" type="text/css" href="{% static 'dragon/base_style.css' %}">
     {% block page-styles %}{% endblock %}
   </head>
@@ -51,9 +51,6 @@
             </div>
           </li>
         {% load templatefilters %}
-        {% if user.is_authenticated %}
-        <div class="collapse navbar-collapse dual-collapse2">
-        <ul class="navbar-nav ml-auto">  
           {% if user.is_authenticated %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-center text-md-left" href="#" id="memberDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -68,6 +65,7 @@
               <a class="dropdown-item text-center text-md-left" href="/members/nonmember_form/">Add Non-Members</a>
             </div>
           </li>
+          {% endif %}
           {% if request.user|has_group:"Committee" or user.is_staff %} 
           <li class="nav-item">
               <a class="text-center text-md-left nav-link" href="/members/signout">SIGN OUT</a>
@@ -78,7 +76,6 @@
           </li>
           {% endif %}
         </ul>
-    </div>
     </nav>
     {% block content %}
     {% endblock %}
