--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -57,7 +57,7 @@
               MEMBERS
             </a>
             <div class="dropdown-menu" aria-labelledby="memberDropdown">
-              {% if request.user|has_group:"Committee" or user.is_staff %} 
+              {% if user.is_staff %} 
               <a class="dropdown-item text-center text-md-left" href="{% url 'members:clubmembers' %}">Club Members</a>
               <a class="dropdown-item text-center text-md-left" href="{% url 'members:nonmembers' %}">Non-Members</a>
               {% endif %}
@@ -65,8 +65,11 @@
               <a class="dropdown-item text-center text-md-left" href="/members/nonmember_form/">Add Non-Members</a>
             </div>
           </li>
-          {% endif %}
-          {% if request.user|has_group:"Committee" or user.is_staff %} 
+              {% if user.is_staff %}
+              <li class="nav-item">
+                <a class="text-center text-md-left nav-link" href="/admin">ADMIN</a>
+              </li>
+              {% endif %}
           <li class="nav-item">
               <a class="text-center text-md-left nav-link" href="/members/signout">SIGN OUT</a>
           </li>
@@ -75,7 +78,8 @@
               <a class="text-center text-md-left nav-link" href="/members/signin">SIGN IN</a>
           </li>
           {% endif %}
-        </ul>
+          </ul>
+        </div>
     </nav>
     {% block content %}
     {% endblock %}
