Added oneline documentation for committee.html

--- a/src/dragon/dragon/templates/dragon/committee.html
+++ b/src/dragon/dragon/templates/dragon/committee.html
@@ -3,6 +3,7 @@
 {% block title %}{{ block.super }} - Committee{% endblock %}
 
 {% block content %}
+    <!-- Prefilled committee page -->
     <div class="col-12">
 
         <h1>The Unigames Committee</h1>
