Added oneline documentation contact-us.html

--- a/src/dragon/dragon/templates/dragon/contact-us.html
+++ b/src/dragon/dragon/templates/dragon/contact-us.html
@@ -3,7 +3,7 @@
 {% block title %}{{ block.super }} - Contact Us{% endblock %}
 
 {% block content %}
-
+    <!-- Prefilled contact us page -->
     <div class="col-12">
         <h1>Contact Us</h1>
 
