Added oneline documentation for faq.html

--- a/src/dragon/dragon/templates/dragon/faq.html
+++ b/src/dragon/dragon/templates/dragon/faq.html
@@ -3,7 +3,7 @@
 {% block title %}{{ block.super }} - Frequently Asked Questions{% endblock %}
 
 {% block content %}
-
+    <!-- Prefilled FAQ page -->
     <div class="col-12">
         <h1>Unigames FAQ</h1>
 
