Added oneline documentation for index.html

--- a/src/dragon/dragon/templates/dragon/index.html
+++ b/src/dragon/dragon/templates/dragon/index.html
@@ -3,7 +3,7 @@
 {% block title %}{{ block.super }}{% endblock %}
 
 {% block content %}
-
+    <!-- Prefilled welcome page -->
     <div class="col-12">
         <h1>Welcome to UniGames</h1>
         <p>
