Added oneline documentation for life-members.html

--- a/src/dragon/dragon/templates/dragon/life-members.html
+++ b/src/dragon/dragon/templates/dragon/life-members.html
@@ -3,7 +3,7 @@
 {% block title %}{{ block.super }} - Life Members{% endblock %}
 
 {% block content %}
-
+    <!-- Prefilled life members page -->
     <div class="col-12">
         <h1>Honorary Life Members</h1>
         <p>
