Added oneline documentation for roleplaying.html

--- a/src/dragon/dragon/templates/dragon/roleplaying.html
+++ b/src/dragon/dragon/templates/dragon/roleplaying.html
@@ -3,7 +3,7 @@
 {% block title %}{{ block.super }} - Roleplaying{% endblock %}
 
 {% block content %}
-
+    <!-- Prefilled roleplaying page -->
     <div class="col-12">
         <h1>What is Roleplaying?</h1>
 
