fixed bug for non-member detail page rendering

--- a/src/dragon/members/templates/members/clubmembers/detail.html
+++ b/src/dragon/members/templates/members/clubmembers/detail.html
@@ -1,6 +1,6 @@
 {% extends "dragon/base.html" %}
 
-{% block title %}{{ block.super }} - Club Member: {{ clubmember.firstName }}{% endblock %}
+{% block title %}{{ block.super }} - Club Member: {{ clubmember.FirstName }}{% endblock %}
 
 {% block content %}
   <div class="container">
